# dartmouth-auth

./: .gitlab-ci.yml  pyproject.toml
docs/: conf.py  index.rst
src/dartmouth_auth/: jwt.py
