[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dartmouth_auth"
version = "0.0.1"
authors = [
  { name="Simon Stone", email="simon.stone@dartmouth.edu" },
]
description = "A lightweight package facilitating authentication for Dartmouth services."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
